php/include/pdf_oxide.h

typedef struct DocumentEditor DocumentEditor;
typedef struct Pdf Pdf;
typedef struct PdfDocument PdfDocument;
char *document_editor_get_producer(DocumentEditor *handle, int32_t *error_code);
int32_t document_editor_set_producer(DocumentEditor *handle,
                                     const char *value,
                                     int32_t *error_code);
char *document_editor_get_creation_date(DocumentEditor *handle, int32_t *error_code);
int32_t document_editor_set_creation_date(DocumentEditor *handle,
                                          const char *date_str,
                                          int32_t *error_code);
DocumentEditor *document_editor_open_from_bytes(const uint8_t *data,
                                                uintptr_t len,
                                                int32_t *error_code);
uint8_t *document_editor_save_to_bytes(DocumentEditor *handle,
                                       uintptr_t *out_len,
                                       int32_t *error_code);
uint8_t *document_editor_save_to_bytes_with_options(DocumentEditor *handle,
                                                    bool compress,
                                                    bool garbage_collect,
                                                    bool linearize,
                                                    uintptr_t *out_len,
                                                    int32_t *error_code);
uint8_t *document_editor_extract_pages_to_bytes(DocumentEditor *handle,
                                                const int32_t *pages,
                                                uintptr_t count,
                                                uintptr_t *out_len,
                                                int32_t *error_code);
int32_t document_editor_convert_to_pdf_a(DocumentEditor *handle,
                                         int32_t level,
                                         int32_t *error_code);
uint8_t *document_editor_save_encrypted_to_bytes(DocumentEditor *handle,
                                                 const char *user_password,
                                                 const char *owner_password,
                                                 uintptr_t *out_len,
                                                 int32_t *error_code);
int32_t document_editor_merge_from_bytes(DocumentEditor *handle,
                                         const uint8_t *data,
                                         uintptr_t len,
                                         int32_t *error_code);
int32_t document_editor_embed_file(DocumentEditor *handle,
                                   const char *name,
                                   const uint8_t *data,
                                   uintptr_t len,
                                   int32_t *error_code);
int32_t document_editor_apply_page_redactions(DocumentEditor *handle,
                                              uintptr_t page,
                                              int32_t *error_code);
int32_t document_editor_apply_all_redactions(DocumentEditor *handle, int32_t *error_code);
int32_t document_editor_rotate_all_pages(DocumentEditor *handle,
                                         int32_t degrees,
                                         int32_t *error_code);
int32_t document_editor_rotate_page_by(DocumentEditor *handle,
                                       uintptr_t page,
                                       int32_t degrees,
                                       int32_t *error_code);
int32_t document_editor_get_page_media_box(DocumentEditor *handle,
                                           uintptr_t page,
                                           double *x,
                                           double *y,
                                           double *w,
                                           double *h,
                                           int32_t *error_code);
int32_t document_editor_set_page_media_box(DocumentEditor *handle,
                                           uintptr_t page,
                                           double x,
                                           double y,
                                           double w,
                                           double h,
                                           int32_t *error_code);
int32_t document_editor_get_page_crop_box(DocumentEditor *handle,
                                          uintptr_t page,
                                          double *x,
                                          double *y,
                                          double *w,
                                          double *h,
                                          int32_t *error_code);
int32_t document_editor_set_page_crop_box(DocumentEditor *handle,
                                          uintptr_t page,
                                          double x,
                                          double y,
                                          double w,
                                          double h,
                                          int32_t *error_code);
int32_t document_editor_erase_regions(DocumentEditor *handle,
                                      uintptr_t page,
                                      const double *rects,
                                      uintptr_t rects_count,
                                      int32_t *error_code);
int32_t document_editor_clear_erase_regions(DocumentEditor *handle,
                                            uintptr_t page,
                                            int32_t *error_code);
int32_t document_editor_is_page_marked_for_flatten(const DocumentEditor *handle, uintptr_t page);
int32_t document_editor_unmark_page_for_flatten(DocumentEditor *handle,
                                                uintptr_t page,
                                                int32_t *error_code);
int32_t document_editor_is_page_marked_for_redaction(const DocumentEditor *handle, uintptr_t page);
int32_t document_editor_unmark_page_for_redaction(DocumentEditor *handle,
                                                  uintptr_t page,
                                                  int32_t *error_code);
int32_t document_editor_delete_page(DocumentEditor *handle,
                                    int32_t page_index,
                                    int32_t *error_code);
int32_t document_editor_move_page(DocumentEditor *handle,
                                  int32_t from,
                                  int32_t to,
                                  int32_t *error_code);
int32_t document_editor_get_page_rotation(DocumentEditor *handle,
                                          int32_t page,
                                          int32_t *error_code);
int32_t document_editor_set_page_rotation(DocumentEditor *handle,
                                          int32_t page,
                                          int32_t degrees,
                                          int32_t *error_code);
int32_t document_editor_erase_region(DocumentEditor *handle,
                                     int32_t page,
                                     float x,
                                     float y,
                                     float w,
                                     float h,
                                     int32_t *error_code);
int32_t document_editor_flatten_annotations(DocumentEditor *handle,
                                            int32_t page,
                                            int32_t *error_code);
int32_t document_editor_flatten_all_annotations(DocumentEditor *handle, int32_t *error_code);
int32_t document_editor_crop_margins(DocumentEditor *handle,
                                     float left,
                                     float right,
                                     float top,
                                     float bottom,
                                     int32_t *error_code);
int32_t document_editor_merge_from(DocumentEditor *handle,
                                   const char *source_path,
                                   int32_t *error_code);
int32_t document_editor_save_encrypted(DocumentEditor *handle,
                                       const char *path,
                                       const char *user_password,
                                       const char *owner_password,
                                       int32_t *error_code);
int32_t document_editor_set_form_field_value(DocumentEditor *handle,
                                             const char *name,
                                             const char *value,
                                             int32_t *error_code);
int32_t document_editor_flatten_forms(DocumentEditor *handle, int32_t *error_code);
int32_t document_editor_flatten_forms_on_page(DocumentEditor *handle,
                                              int32_t page_index,
                                              int32_t *error_code);
int32_t document_editor_flatten_warnings_count(const DocumentEditor *handle);
char *document_editor_flatten_warning(const DocumentEditor *handle,
                                      int32_t index,
                                      int32_t *error_code);
PdfDocument *PdfDocumentOpen(const char *path, int32_t *error_code);
void PdfDocumentFree(PdfDocument *handle);
int32_t PdfDocumentGetPageCount(PdfDocument *handle, int32_t *error_code);
char *PdfDocumentExtractText(PdfDocument *handle, int32_t page_index, int32_t *error_code);
char *PdfDocumentToMarkdown(PdfDocument *handle, int32_t page_index, int32_t *error_code);
char *PdfDocumentToHtml(PdfDocument *handle, int32_t page_index, int32_t *error_code);
char *PdfDocumentToPlainText(PdfDocument *handle, int32_t page_index, int32_t *error_code);
Pdf *PdfFromMarkdown(const char *markdown, int32_t *error_code);
Pdf *PdfFromHtml(const char *html, int32_t *error_code);
Pdf *PdfFromText(const char *text, int32_t *error_code);
int32_t PdfSave(Pdf *handle, const char *path, int32_t *error_code);
uint8_t *PdfSaveToBytes(Pdf *handle, int32_t *data_len, int32_t *error_code);
void PdfFree(Pdf *handle);
DocumentEditor *DocumentEditorOpen(const char *path, int32_t *error_code);
void DocumentEditorFree(DocumentEditor *handle);
int32_t DocumentEditorSave(DocumentEditor *handle, const char *path, int32_t *error_code);
int32_t DocumentEditorSetTitle(DocumentEditor *handle, const char *value, int32_t *error_code);
int32_t DocumentEditorSetAuthor(DocumentEditor *handle, const char *value, int32_t *error_code);
void FreeString(char *ptr);
void FreeBytes(uint8_t *ptr);
char *AllocString(const char *s);