ruby/lib/pdf_oxide/ffi/bindings.rb


      attach_function :AllocString, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :DocumentEditorFree, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :DocumentEditorOpen, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :DocumentEditorSave, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :DocumentEditorSetAuthor, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :DocumentEditorSetTitle, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :FreeBytes, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :FreeString, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :PdfDocumentExtractText, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :PdfDocumentFree, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :PdfDocumentGetPageCount, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :PdfDocumentOpen, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :PdfDocumentToHtml, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :PdfDocumentToMarkdown, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :PdfDocumentToPlainText, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :PdfFree, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :PdfFromHtml, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :PdfFromMarkdown, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :PdfFromText, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :PdfSave, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :PdfSaveToBytes, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_apply_all_redactions, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_apply_page_redactions, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_clear_erase_regions, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_convert_to_pdf_a, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_crop_margins, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_delete_page, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_embed_file, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_erase_region, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_erase_regions, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_extract_pages_to_bytes, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_flatten_all_annotations, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_flatten_annotations, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_flatten_forms, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_flatten_forms_on_page, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_flatten_warning, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_flatten_warnings_count, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_get_creation_date, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_get_keywords, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_get_page_crop_box, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_get_page_media_box, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_get_page_rotation, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_get_producer, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_is_page_marked_for_flatten, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_is_page_marked_for_redaction, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_merge_from, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_merge_from_bytes, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_move_page, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_open_from_bytes, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_rotate_all_pages, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_rotate_page_by, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_save_encrypted, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_save_encrypted_to_bytes, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_save_to_bytes, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_save_to_bytes_with_options, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_set_creation_date, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_set_form_field_value, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_set_keywords, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_set_page_crop_box, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_set_page_media_box, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_set_page_rotation, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_set_producer, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_unmark_page_for_flatten, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :document_editor_unmark_page_for_redaction, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :lut_interp_linear16, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :lut_inverse_interp16, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_create_from_markdown, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_document_format, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_document_free, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_document_open, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_document_open_from_bytes, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_document_plain_text, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_document_save_as, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_document_to_html, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
      attach_function :office_document_to_ir_json, [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer, :pointer], :pointer, blocking: false
